Save data as documents by format

--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,6 @@
 
 [URLS]
 SpanishSupremeCourt = https://hj.tribunalconstitucional.es/HJ/Resolucion/Api/json/
+
+[EXTRA]
+OutputPath = data/json_data.json
