--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,7 @@
 
 [URLS]
 SpanishSupremeCourt = https://hj.tribunalconstitucional.es/HJ/Resolucion/Api/json/
+USASupremeCourt = https://www.courtlistener.com/api/rest/v3/
 
 [EXTRA]
-OutputPath = data/json_data.json
+OutputPath = data/
