--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [DEFAULT]
 
+databaseUrl = http://localhost:3002/
+
 [URLS]
 SpanishSupremeCourt = https://hj.tribunalconstitucional.es/HJ/Resolucion/Api/json/
 USASupremeCourt = https://www.courtlistener.com/api/rest/v3/
